{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 660,
  "lineage": "43aecd08-b1d5-9902-82a5-2e6413273ac6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:instance/i-0b97feb785048437e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform_role",
            "id": "i-0b97feb785048437e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5e19a98541d91cb",
            "private_dns": "ip-172-31-40-40.ap-northeast-1.compute.internal",
            "private_ip": "172.31.40.40",
            "public_dns": "ec2-18-179-15-243.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.15.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a4ef2f10dd86bc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a1bebd2",
            "tags": {
              "Name": "k8s-worker-1-1",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tags_all": {
              "Name": "k8s-worker-1-1",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb712c4b7b004224"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_ec2_profile",
            "aws_iam_role.app_iam_role",
            "aws_security_group.k8s_sg",
            "data.aws_ami.recent_amazon_linux2",
            "data.aws_iam_policy_document.ec2_assume_role",
            "time_sleep.wait_200_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker1-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:instance/i-04a732b7d50458006",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform_role",
            "id": "i-04a732b7d50458006",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be1660df6817a794",
            "private_dns": "ip-172-31-46-18.ap-northeast-1.compute.internal",
            "private_ip": "172.31.46.18",
            "public_dns": "ec2-13-231-242-246.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.242.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6eab9bd0503cc80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a1bebd2",
            "tags": {
              "Name": "k8s-worker-1-2",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tags_all": {
              "Name": "k8s-worker-1-2",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb712c4b7b004224"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_ec2_profile",
            "aws_iam_role.app_iam_role",
            "aws_security_group.k8s_sg",
            "data.aws_ami.recent_amazon_linux2",
            "data.aws_iam_policy_document.ec2_assume_role",
            "time_sleep.wait_200_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker1-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:instance/i-070c8b828ba63abe9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform_role",
            "id": "i-070c8b828ba63abe9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbe3110b62cefa0b",
            "private_dns": "ip-172-31-33-6.ap-northeast-1.compute.internal",
            "private_ip": "172.31.33.6",
            "public_dns": "ec2-18-183-75-248.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.183.75.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e5639db8660aee3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a1bebd2",
            "tags": {
              "Name": "k8s-worker-1-3",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tags_all": {
              "Name": "k8s-worker-1-3",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb712c4b7b004224"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_ec2_profile",
            "aws_iam_role.app_iam_role",
            "aws_security_group.k8s_sg",
            "data.aws_ami.recent_amazon_linux2",
            "data.aws_iam_policy_document.ec2_assume_role",
            "time_sleep.wait_200_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker1-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:instance/i-0c97a4691d7492088",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform_role",
            "id": "i-0c97a4691d7492088",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05aa8dcaf4348faf2",
            "private_dns": "ip-172-31-33-217.ap-northeast-1.compute.internal",
            "private_ip": "172.31.33.217",
            "public_dns": "ec2-3-112-249-138.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.249.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb38ab88a941e9bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a1bebd2",
            "tags": {
              "Name": "k8s-worker-1-4",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tags_all": {
              "Name": "k8s-worker-1-4",
              "kubernetes.io/cluster/k8s": "k8s-worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb712c4b7b004224"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_ec2_profile",
            "aws_iam_role.app_iam_role",
            "aws_security_group.k8s_sg",
            "data.aws_ami.recent_amazon_linux2",
            "data.aws_iam_policy_document.ec2_assume_role",
            "time_sleep.wait_200_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8sMaster1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ebacdc178ae23b7",
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:instance/i-01f08a432b78016b2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform_role",
            "id": "i-01f08a432b78016b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c127d31d83087dbd",
            "private_dns": "ip-172-31-47-46.ap-northeast-1.compute.internal",
            "private_ip": "172.31.47.46",
            "public_dns": "ec2-18-179-12-227.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.12.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ab9fbaab3dfc027",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9a1bebd2",
            "tags": {
              "Name": "k8s-Master-1",
              "kubernetes.io/cluster/k8s": "k8s-k8sMaster"
            },
            "tags_all": {
              "Name": "k8s-Master-1",
              "kubernetes.io/cluster/k8s": "k8s-k8sMaster"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb712c4b7b004224"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.app_ec2_profile",
            "aws_iam_role.app_iam_role",
            "aws_security_group.k8s_sg",
            "data.aws_ami.recent_amazon_linux2",
            "data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:759348358497:security-group/sg-0bb712c4b7b004224",
            "description": "web front securit group",
            "egress": [],
            "id": "sg-0bb712c4b7b004224",
            "ingress": [],
            "name": "k8s_sg",
            "name_prefix": "",
            "owner_id": "759348358497",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-8b6b5dec"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1884164152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bb712c4b7b004224",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.k8s_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2859521498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bb712c4b7b004224",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.k8s_sg"
          ]
        }
      ]
    }
  ]
}